20040303 scorpion.c: no need to zero memory in reset function (Stuart
	 Brady).
20040303 lib/tape_scorpion.z80: add Scorpion tape auto-load snapshot
	 (Stuart Brady).
20040305 tc2068.c: make code C89 compatible.
20040309 pokefinder/pokefinder.[ch],ui/gtk/pokefinder.c: extend the
	 pokefinder to be able to find bytes which have increased or
	 decreased since the last check.
20040310 Move the low-level sound files into the new sound/ directory.
20040310 fuse.c,sound.c,spectrum.c,timer.c,sound/: move the sound code
	 detection logic into the new sound/lowlevel.h.
20040310 configure.in,sound/{Makefile.am,hpsound.c,lowlevel.h}: add HP-UX
         sound support (patch #911651) (Stuart Brady).
20040311 Makefile.am,input.[ch],keyboard.[ch],keysyms.{dat,pl},ui/ui.h,
	 ui/gtk/gtkkeyboard.c: first changes to introduce a generalised
	 input layer.
20040311 input.[ch],keysyms.dat,ui/options.dat,ui/sdl/sdlkeyboard.c,widget/:
	 widgets and SDL UI working with the new input layer code.
20040311 ui/xlib/{xdisplay.c,xkeyboard.c}: make Xlib UI work with new
	 input layer code.
20040311 ui/gtk/roms.c: make changing ROMs work.
20040311 machine.c: remove the segfault which would occur if one of the
	 ROMs of a multi-ROM machine didn't load.
20040312 ay.c: unused bits of AY registers are silently zeroed (basically
	 equivalent to patch #911206 by Stuart Brady).
20040317 sound/Makefile.am: Add libspectrum path to includes.
20040319 Makefile.am,fuse.c,machine.c,periph.c,settings.dat,ui/options.dat,
	 ui/gtk/gtkui.c,widget/{menu.c,menu_data.c,widget_internals.h}:
	 add support for the "simple 8-bit" IDE interface (part of patch
	 #916816) (Garry Lancaster).
20040319 simpleide.[ch],ui/gtk/gtkui.c,widget/{menu.c,menu_data.c,
	 widget_internals.h}: add a 'commit' menu option for the IDE
	 disks.
20040320 snapshot.c: copy RAM page 8-15 into the libspectrum_snap structure.
20040320 snapshot.c,tape.c: select output format based on filename.